Refine and deduplicate